[gd_scene load_steps=4 format=3 uid="uid://b1fmfftet4j76"]

[ext_resource type="Script" uid="uid://bqpnx6s3fvsqv" path="res://questionscene.gd" id="1_k7lh0"]
[ext_resource type="Texture2D" uid="uid://c4u7v53mrsevs" path="res://shaq.png" id="2_n7cm6"]
[ext_resource type="Texture2D" uid="uid://co4cc6jmvgib5" path="res://icon.svg" id="2_r1fm6"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k7lh0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -349.0
offset_bottom = 243.0
grow_horizontal = 0

[node name="ProgressBar" type="TextureProgressBar" parent="MarginContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
max_value = 60.0
step = 0.01
value = 60.0
fill_mode = 4
nine_patch_stretch = true
texture_progress = ExtResource("2_n7cm6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
texture = ExtResource("2_r1fm6")

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
text = "Question 0
Who is Blablabla"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 40
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Answer 1"

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Answer 1"

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer/PanelContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer/PanelContainer3/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Answer 1"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="PanelContainer4" type="PanelContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer2/PanelContainer4"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer2/PanelContainer4/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Answer 1"

[node name="PanelContainer5" type="PanelContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer2/PanelContainer5"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/HBoxContainer2/PanelContainer5/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Answer 1"

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
